nav bar moved to desktop awt